# prospector-zmk-module

./: .gitignore  CMakeLists.txt  Kconfig  README.md
boards/shields/prospector_adapter/: CMakeLists.txt  Kconfig.defconfig  prospector_adapter.conf  prospector_adapter.overlay
boards/shields/prospector_adapter/boards/: nice_nano_nrf52840_zmk.overlay  nice_nano_v2.overlay  xiao_ble_zmk.overlay
boards/shields/prospector_adapter/src/: brightness.c  custom_status_screen.c  diagnostics_page.c  diagnostics_page.h  touch_swipe.c
boards/shields/prospector_adapter/src/layouts/operator/: battery_circles.c  layer_display.c  modifier_indicator.c  output.c  status_screen.c  wpm_meter.c
docs/: operator-status-render.md
drivers/sensor/apds9960/: CMakeLists.txt  Kconfig  prospector_apds9960.c
dts/bindings/behaviors/: zmk,behavior-prospector-brightness.yaml  zmk,behavior-prospector-display-page.yaml
include/dt-bindings/prospector/: brightness.h  display_page.h
include/prospector/: brightness.h  display_pages.h
src/behaviors/: behavior_prospector_brightness.c  behavior_prospector_display_page.c
tools/: render_operator_status.py
tools/operator_host/: CMakeLists.txt  lv_conf.h
tools/operator_host/include/: prospector_render_state.h
tools/operator_host/include/zephyr/: kernel.h
tools/operator_host/include/zephyr/logging/: log.h
tools/operator_host/include/zmk/: ble.h  display.h  endpoints.h  event_manager.h  hid.h  keymap.h  wpm.h
tools/operator_host/include/zmk/events/: battery_state_changed.h  ble_active_profile_changed.h  caps_word_state_changed.h  endpoint_changed.h  keycode_state_changed.h  layer_state_changed.h  split_central_status_changed.h  wpm_state_changed.h
tools/operator_host/src/: host_modifier_order.c  host_state.c  main.c
